fixed alignment on map toggle

--- a/frontend/src/components/AllSpots/AllSpots.css
+++ b/frontend/src/components/AllSpots/AllSpots.css
@@ -3,7 +3,6 @@
   flex-wrap: wrap;
   justify-content: center;
   max-width: 1440px;
-  border: 2px solid red;
 }
 
 .all-spots-container {
