--- a/frontend/src/components/MapSearch/MapSearch.css
+++ b/frontend/src/components/MapSearch/MapSearch.css
@@ -3,7 +3,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .google-maps-box {
@@ -12,7 +12,7 @@
   top: 0;
   height: 115%;
   width: 100%;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
 }
 
 .floating-map-toggle {
